--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0"
   },
